@@ -16,15 +16,19 @@ class StringHelper
     {
         $first = true;
         $queryString = '';
-        $searchTerm = DB::connection()->getPdo()->quote('%'.$searchTerm.'%');
+        $searchTerms = explode(' ', $searchTerm);
 
-        foreach ($array as $column) {
-            if ($first) {
-                $first = false;
-            } else {
-                $queryString .= ' or ';
+        foreach ($searchTerms as $searchTerm) {
+            $searchTerm = DB::connection()->getPdo()->quote('%'.$searchTerm.'%');
+
+            foreach ($array as $column) {
+                if ($first) {
+                    $first = false;
+                } else {
+                    $queryString .= ' or ';
+                }
+                $queryString .= $column.' LIKE '.$searchTerm;
             }
-            $queryString .= $column.' LIKE '.$searchTerm;
         }
 
         return $queryString;
