@@ -13,6 +13,7 @@ New features:
 
 Enhancements:
 
+* Accept last name when using contact search field
 * Register all app services as singleton
 * Docker image: add sentry-cli and run sentry:release command if sentry is enabled
 * Refactor reminders by removing Notifications table and creating two new tables: reminder outbox and reminder sent
